* vm_insnhelper.c (vm_yield_setup_block_args): splat single   argument if optinal arguments are defined not only mandatory or   post arguments.  [ruby-core:41557] [Bug #5730]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@34020 b2dd03c8-39d4-4d8f-98ff-823fe69b080e